Added unit movement. To move, select a unit by clicking on it and then click the cell you want it to move to. If it's one of the cells it can move to, it'll move there. Currently no highlights for where the unit can move so: you can move in any cardinal or diagonal directions up to three spaces. Other units block that movement.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -72,4 +72,10 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Scalable
 AppliedDefaultGraphicsPerformance=Scalable
 
+[/Script/EngineSettings.GameMapsSettings]
+GlobalDefaultGameMode=/Game/Actors/CustomGameMode.CustomGameMode_C
+GameInstanceClass=/Game/Actors/GameManager.GameManager_C
+bUseSplitscreen=False
+EditorStartupMap=/Game/Main.Main
+GameDefaultMap=/Game/Main.Main
 
